--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
-    background-color: plum;
+    background-color: rgb(243, 209, 243);
+#images-removebg-preview 1.png{
+    width:50%/px
+    height:7%/px
+    padding-left: 
+    padding-right: 
+    background: 
+
 }
+}
+
+body{
+    background-color: rgb(248, 238, 255);
+}
+
+link:focus-visible
